# cli-music-player

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
src/common/: mod.rs  path.rs
src/common/event/: event_bus.rs  mitt.rs  mod.rs
src/music/: player.rs
