[package]
name = "cli-player"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
futures = "0.3.28"
rodio = { version = "0.17.0", features = ["wasm-bindgen", "minimp3", "symphonia", "symphonia-all"] }
symphonia = "0.5.3"
async-std = { version = "1.2.0", features = ["attributes"] }
once_cell = "1.18.0"
event-emitter-rs = "0.1.4"
uuid = {version = "1.3.3",features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

